--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-temp
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sarbajna Lab - Sustainable Organometallic Catalysis</title>
+    <meta name="description" content="Sarbajna Lab designs and develops next-generation sustainable organometallic catalysts with a focus on green chemistry and small molecule activation.">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to the Sarbajna Lab</h1>
+        <p>Designing next-generation sustainable organometallic catalysts for a greener future.</p>
+    </header>
+
+    <section>
+        <h2>Our Mission</h2>
+        <ul>
+            <li>Creating environmentally friendly and atom-economical catalytic systems.</li>
+            <li>Elucidating reaction mechanisms to guide rational catalyst design.</li>
+            <li>Addressing global challenges in green and sustainable chemistry.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>What We Do</h2>
+        <ul>
+            <li>Organometallic chemistry and homogeneous catalysis.</li>
+            <li>Activation of small molecules (H₂, N₂, CO₂, etc.).</li>
+            <li>Design and synthesis of multifunctional ligands.</li>
+            <li>Mechanistic and computational studies to uncover catalytic pathways.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Why It Matters</h2>
+        <p>By integrating metal–ligand cooperation with green chemistry principles, our research paves the way for innovative solutions in energy, materials science, and sustainable chemical manufacturing.</p>
+    </section>
+
+    <footer>
+        <h2>Get in Touch</h2>
+        <p>Email: <a href="mailto:abir.sarbajna@gmail.com">abir.sarbajna@gmail.com</a></p>
+    </footer>
+</body>
+</html>
